--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -30,7 +30,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#000,
+		bg:					#584d00,
 		fg:					rgba(255,255,255,0.75),
 		fg-bold:			#fff,
 		fg-light:			rgba(255,255,255,0.5),
